// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match List Table Tests Should render correctly for correct input 1`] = `
<table
  className="ui striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        team A vs team B
      </td>
      <td
        className=""
      >
        comp A
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        team C vs test D
      </td>
      <td
        className=""
      >
        comp B
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Match List Table Tests Should render correctly for correct input with onSelect handler 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        team A vs team B
      </td>
      <td
        className=""
      >
        comp A
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991
      </td>
      <td
        className=""
      >
        team C vs test D
      </td>
      <td
        className=""
      >
        comp B
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Match List Table Tests Should render correctly for correct with no data 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Date
      </th>
      <th
        className=""
      >
        Match
      </th>
      <th
        className=""
      >
        Competition
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  />
</table>
`;

exports[`Match List Table Tests Should render correctly with selected row 1`] = `
<Table
  as="table"
  selectable={true}
  striped={true}
>
  <TableHeader
    as="thead"
  >
    <TableRow
      as="tr"
      cellAs="td"
    >
      <TableHeaderCell
        as="th"
      >
        Date
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Match
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Competition
      </TableHeaderCell>
    </TableRow>
  </TableHeader>
  <TableBody
    as="tbody"
  >
    <MatchRow
      data={
        Match {
          "away": "team B",
          "competitionID": 3,
          "competitionName": "comp A",
          "date": 1991-04-20T00:00:00.000Z,
          "home": "team A",
          "id": 1,
        }
      }
      isActive={true}
      key="1"
      onSelect={[Function]}
    />
    <MatchRow
      data={
        Match {
          "away": "test D",
          "competitionID": 4,
          "competitionName": "comp B",
          "date": 1991-04-20T00:00:00.000Z,
          "home": "team C",
          "id": 2,
        }
      }
      isActive={false}
      key="2"
      onSelect={[Function]}
    />
  </TableBody>
</Table>
`;
